--- a/nicepage.css
+++ b/nicepage.css
@@ -29208,7 +29208,9 @@ a.u-link.u-text-hover-grey-90:hover {
 @media (max-width: 1199px){ .u-footer .u-image-1 {width: 80px; height: 40px} }
 
 
-
+@media (max-width: 575px){ .u-footer .u-sheet-1 {min-height: 96px}
+.u-footer .u-image-1 {margin-top: 42px}
+.u-footer .u-menu-1 {width: auto; margin: -82px auto 0 121px} }
 
  /*begin-variables base-font-size*/ 
  html { font-size: 16px; }
