--- a/Sketches.css
+++ b/Sketches.css
@@ -1,21 +1,15 @@
 .u-section-1 {background-image: url("images/FruitsPhotoCollageFoodFacebookCover2.png"); background-position: 50% 50%}
 .u-section-1 .u-sheet-1 {min-height: 702px}
-.u-section-1 .u-text-1 {font-weight: 400; margin: 264px 651px 0 0}
-.u-section-1 .u-text-2 {font-size: 2.25rem; background-image: none; width: 835px; font-family: "Alex Brush"; margin: 345px auto 48px} 
+.u-section-1 .u-text-1 {font-size: 2.25rem; background-image: none; font-family: "Alex Brush"; font-style: normal; font-weight: normal; width: 835px; margin: 617px auto 42px} 
 
-@media (max-width: 1199px){ .u-section-1 .u-sheet-1 {min-height: 500px}
-.u-section-1 .u-text-1 {margin-right: 451px}
-.u-section-1 .u-text-2 {font-style: normal; font-weight: normal} }
+@media (max-width: 1199px){ .u-section-1 .u-sheet-1 {min-height: 500px} }
 
-@media (max-width: 991px){ .u-section-1 .u-text-1 {margin-right: 231px}
-.u-section-1 .u-text-2 {width: 720px} }
+@media (max-width: 991px){ .u-section-1 .u-text-1 {width: 720px} }
 
-@media (max-width: 767px){ .u-section-1 .u-text-1 {margin-right: 51px}
-.u-section-1 .u-text-2 {width: 540px} }
+@media (max-width: 767px){ .u-section-1 .u-text-1 {width: 540px} }
 
 @media (max-width: 575px){ .u-section-1 {background-position: 12.33% 50%}
-.u-section-1 .u-text-1 {margin-right: 0}
-.u-section-1 .u-text-2 {font-size: 1.5rem; width: 340px} }.u-section-2 {background-image: none}
+.u-section-1 .u-text-1 {font-size: 1.5rem; width: 340px} }.u-section-2 {background-image: none}
 .u-section-2 .u-sheet-1 {min-height: 768px}
 .u-section-2 .u-layout-wrap-1 {width: 833px; margin: 60px auto}
 .u-section-2 .u-layout-cell-1 {min-height: 220px}
@@ -111,9 +105,15 @@
 .u-section-3 .u-container-layout-2 {padding-left: 10px; padding-right: 10px}
 .u-section-3 .u-gallery-2 {height: 3439px; grid-template-columns: repeat(1, auto); margin-right: initial; margin-left: initial} }
 
-@media (max-width: 575px){ .u-section-3 .u-text-1 {font-size: 2.25rem}
-.u-section-3 .u-text-2 {margin-left: 114px}
-.u-section-3 .u-text-3 {margin-left: 110px}
+@media (max-width: 575px){ .u-section-3 .u-text-1 {margin-top: 20px; font-size: 2.25rem}
+.u-section-3 .u-text-2 {margin-top: 20px; margin-left: 80px}
+.u-section-3 .u-text-3 {margin-top: 20px; margin-left: 80px}
 .u-section-3 .u-tabs-1 {width: 340px}
 .u-section-3 .u-gallery-1 {height: 2116px; margin-right: initial; margin-left: initial}
-.u-section-3 .u-gallery-2 {height: 2116px; margin-right: initial; margin-left: initial} }
+.u-section-3 .u-gallery-2 {height: 2116px; margin-right: initial; margin-left: initial} }.u-section-4 .u-sheet-1 {min-height: 294px}
+.u-section-4 .u-text-1 {width: 680px; font-size: 1.5rem; margin: 20px auto 0}
+.u-section-4 .u-btn-1 {border-style: solid; background-image: none; font-size: 1.875rem; margin: 30px auto 60px} 
+
+@media (max-width: 767px){ .u-section-4 .u-text-1 {width: 540px} }
+
+@media (max-width: 575px){ .u-section-4 .u-text-1 {width: 340px; margin-top: 60px} }
