--- a/nicepage.css
+++ b/nicepage.css
@@ -29209,7 +29209,7 @@ a.u-link.u-text-hover-grey-90:hover {
 
 
 @media (max-width: 575px){ .u-footer .u-sheet-1 {min-height: 132px}
-.u-footer .u-image-1 {margin-top: 28px; margin-left: -1px; width: auto}
+.u-footer .u-image-1 {margin-top: 28px; margin-left: -1px}
 .u-footer .u-menu-1 {width: auto; margin: -68px auto 36px 121px} }
 
  /*begin-variables base-font-size*/ 
